doing register patients

--- a/views/menu.njk
+++ b/views/menu.njk
@@ -2,7 +2,7 @@
 <div class="alert alert-secondary">
 <a href="/patients">Listado de pacientes</a>
 &nbsp;&nbsp;
-<a href="/patients/nuevo">Nuevo paciente</a>
+<a href="/patients/new">Nuevo paciente</a>
 &nbsp;&nbsp;
 <a href="/physios">Listado de fisios</a>
 &nbsp;&nbsp;
