--- a/views/patient_detail.njk
+++ b/views/patient_detail.njk
@@ -11,5 +11,6 @@
     <p><strong>Birth Date:</strong> {{ patient.birthDate }}</p>
     <p><strong>Address:</strong> {{ patient.address }}</p>
     <p><strong>Insurance number:</strong> {{ patient.insuranceNumber }}</p>
+    <p><strong>Imagen:</strong> <img src="../public/uploads/{{ patient.image }}"></p>
 
 {% endblock %}
