--- a/views/menu.njk
+++ b/views/menu.njk
@@ -1,4 +1,4 @@
-
+{# 
 <div class="alert alert-secondary">
 <a href="/patients">Listado de pacientes</a>
 &nbsp;&nbsp;
@@ -6,9 +6,66 @@
 &nbsp;&nbsp;
 <a href="/physios">Listado de fisios</a>
 &nbsp;&nbsp;
-<a href="/physios/nuevo">Nuevo fisio</a>
+<a href="/physios/new">Nuevo fisio</a>
 &nbsp;&nbsp;
 <a href="/records">Listado de records</a>
 &nbsp;&nbsp;
-<a href="/records/nuevo">Nuevo Record</a>
-</div>
+<a href="/records/new">Nuevo Record</a>
+</div> #}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-3">
+                <li class="nav-item">
+                    <a class="nav-link active" href="#">Inicio</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="/patients" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Patients</a>
+                    <ul class="dropdown-menu bg-dark">
+                        <li>
+                            <a class="dropdown-item text-white bg-dark" href="/patients">Listado pacientes</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item text-white bg-dark" href="/patients/new">Registro paciente</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item text-white bg-dark" href="#">Búsqueda por apellido</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Physios</a>
+                    <ul class="dropdown-menu bg-dark">
+                        <li>
+                            <a class="dropdown-item text-white bg-dark" href="/physios">Listado physios</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item text-white bg-dark" href="/physios/new">Registro physio</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item text-white bg-dark" href="#">Búsqueda por especialidad</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Expedientes</a>
+                    <ul class="dropdown-menu bg-dark">
+                        <li>
+                            <a class="dropdown-item text-white bg-dark" href="/records">Listado expedientes</a>
+                        </li>
+                        <li>
+                            <a class="dropdown-item text-white bg-dark" href="/records/new">Nuevo expediente</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    {% if (session and session.userId) %}
+                    <a class="nav-link" href="/auth/logout">Logout</a>
+                    {% else %}
+                    <a class="nav-link" href="/auth/login">Login</a>
+                    {% endif %}
+                </li>
+            </ul>
+        </nav>
