--- a/views/physio_detail.njk
+++ b/views/physio_detail.njk
@@ -10,5 +10,6 @@
     <p><strong>Surname:</strong> {{ physio.surname }}</p>
     <p><strong>Specialty:</strong> {{ physio.specialty }}</p>
     <p><strong>License number:</strong> {{ physio.licenseNumber }}</p>
+    <p><strong>Imagen:</strong> <img src="../public/uploads/{{ physio.image }}"></p>
 
 {% endblock %}
