--- a/views/record_detail.njk
+++ b/views/record_detail.njk
@@ -32,4 +32,6 @@
         </ul>
     </div>
 
+    <a href="/records/{{ record._id }}/appointments/new" class="btn btn-primary">Añadir Cita</a>
+
 {% endblock %}
