--- a/views/base.njk
+++ b/views/base.njk
@@ -4,6 +4,8 @@
         <title>{% block titulo %} {% endblock %}</title>
         <link rel="stylesheet" href="/css/bootstrap.min.css"/>
         <link rel="stylesheet" href="/public/css/estilos.css"/>
+        <script src="/js/popper.min.js" defer></script>
+        <script src="/js/bootstrap.bundle.min.js" defer></script>
     </head>
     <body>
         {% include "menu.njk" %}
