--- a/views/records_list.njk
+++ b/views/records_list.njk
@@ -2,6 +2,12 @@
 {% block titulo %}Expedientes | Listado{% endblock %}
 {% block contenido %}
     <h1>Listado de Records</h1>
+
+    <form action="/records/find" method="get" style="display:inline;">
+        <input type="text" name="surname" placeholder="Buscar por apellido">
+        <button type="submit" class="btn btn-primary">Buscar</button>
+    </form>
+
     <table width="100%">
         {% for record in records %}
             <tr>
