--- a/views/error.njk
+++ b/views/error.njk
@@ -13,5 +13,6 @@
                 {% endif %}
             </div>
         </div>
+        <a class="btn btn-primary" href="/home">Volver a la pagina principal</a>
     </body>
 </html>
