--- a/views/records_list.njk
+++ b/views/records_list.njk
@@ -22,7 +22,7 @@
                         <input type="hidden" name="_method" value="delete"/>
                         <button type="submit" class="btn btn-danger">Delete</button>
                     </form>
-                    <a class="btn btn-primary" href="/record/editar/{{ record.id }}">Add appointment</a>
+                    <a class="btn btn-primary" href="/records/{{ record.id }}/appointments/new">Add appointment</a>
                 </td>
             </tr>
         {% else %}
